Add initial user route controller
