# src/openapi.yaml
@@ -13,6 +13,8 @@ tags:
     description: Game options
   - name: Test
     description: Just to test stuff, will be removed later
+  - name: User
+    description: User options
 servers:
   - url: "https://player.faterpg.nl/{basePath}"
     description: Production Server Api
@@ -34,6 +36,52 @@ paths:
             pattern: '^game_[a-zA-Z0-9]+$'
           required: true
           description: ID of the game to Subscribe to
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  Ok:
+                    type: boolean
+                    example: true
+        "400":
+          $ref: "#/components/responses/400"
+        "401":
+          $ref: "#/components/responses/401"
+        "403":
+          $ref: "#/components/responses/403"
+        "404":
+          $ref: "#/components/responses/404"
+        "500":
+          $ref: "#/components/responses/500"
+        "502":
+          $ref: "#/components/responses/502"
+        default:
+          $ref: "#/components/responses/default"
+  "/users/new/{username}":
+    post:
+      description: Add a new user
+      operationId: user_new_post
+      tags:
+        - User
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+            format: username
+          required: true
+          description: username of the user
+      requestBody:
+        description: password
+        required: true
+        content:
+          text/plain:
+            schema:
+              type: string
       responses:
         "200":
           description: OK
